gen/nlpstack/annotations/Parser/AnnotationParserParser.java
// Generated from /home/marc/Documents/prog/NLP-Pipeline/src/main/java/nlpstack/annotations/Parser/AnnotationParser.g4 by ANTLR 4.7
package nlpstack.annotations.Parser;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class AnnotationParserParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, TAGDELIMITER=3, ANNOTATIONCHARACTER=4, ANNOTATIONOPEN=5, 
		ANNOTATIONCLOSE=6, ESCAPECHARACTER=7, COLON=8, COMMA=9, OPENBRACKET=10, 
		CLOSEBRACKET=11, SPACE=12, DIGIT=13, CHARACTER=14;
	public static final int
		RULE_init = 0, RULE_toplevel = 1, RULE_inputString = 2, RULE_annotation = 3, 
		RULE_lexicalAnnotation = 4, RULE_syntacticAnnotation = 5, RULE_wordAnnotation = 6, 
		RULE_word = 7, RULE_simpleString = 8, RULE_chart = 9, RULE_chartToken = 10, 
		RULE_chartTag = 11, RULE_token = 12, RULE_tag = 13, RULE_number = 14;
	public static final String[] ruleNames = {
		"init", "toplevel", "inputString", "annotation", "lexicalAnnotation", 
		"syntacticAnnotation", "wordAnnotation", "word", "simpleString", "chart", 
		"chartToken", "chartTag", "token", "tag", "number"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'lex:'", "'syn:'", "'\"'", "'#'", "'['", "']'", "'\\'", "':'", 
		"','", "'('", "')'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, null, "TAGDELIMITER", "ANNOTATIONCHARACTER", "ANNOTATIONOPEN", 
		"ANNOTATIONCLOSE", "ESCAPECHARACTER", "COLON", "COMMA", "OPENBRACKET", 
		"CLOSEBRACKET", "SPACE", "DIGIT", "CHARACTER"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "AnnotationParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public AnnotationParserParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class InitContext extends ParserRuleContext {
		public ToplevelContext toplevel() {
			return getRuleContext(ToplevelContext.class,0);
		}
		public TerminalNode EOF() { return getToken(AnnotationParserParser.EOF, 0); }
		public InitContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_init; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AnnotationParserListener ) ((AnnotationParserListener)listener).enterInit(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AnnotationParserListener ) ((AnnotationParserListener)listener).exitInit(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AnnotationParserVisitor ) return ((AnnotationParserVisitor<? extends T>)visitor).visitInit(this);
			else return visitor.visitChildren(this);
		}
	}

	public final InitContext init() throws RecognitionException {
		InitContext _localctx = new InitContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_init);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(30);
			toplevel();
			setState(31);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ToplevelContext extends ParserRuleContext {
		public ToplevelContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_toplevel; }
	 
		public ToplevelContext() { }
		public void copyFrom(ToplevelContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class InputStringThenAnnotationThenToplevelContext extends ToplevelContext {
		public InputStringContext inputString() {
			return getRuleContext(InputStringContext.class,0);
		}
		public AnnotationContext annotation() {
			return getRuleContext(AnnotationContext.class,0);
		}
		public ToplevelContext toplevel() {
			return getRuleContext(ToplevelContext.class,0);
		}
		public InputStringThenAnnotationThenToplevelContext(ToplevelContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AnnotationParserListener ) ((AnnotationParserListener)listener).enterInputStringThenAnnotationThenToplevel(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AnnotationParserListener ) ((AnnotationParserListener)listener).exitInputStringThenAnnotationThenToplevel(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AnnotationParserVisitor ) return ((AnnotationParserVisitor<? extends T>)visitor).visitInputStringThenAnnotationThenToplevel(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class InputStringThenEOFContext extends ToplevelContext {
		public InputStringContext inputString() {
			return getRuleContext(InputStringContext.class,0);
		}
		public InputStringThenEOFContext(ToplevelContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AnnotationParserListener ) ((AnnotationParserListener)listener).enterInputStringThenEOF(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AnnotationParserListener ) ((AnnotationParserListener)listener).exitInputStringThenEOF(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AnnotationParserVisitor ) return ((AnnotationParserVisitor<? extends T>)visitor).visitInputStringThenEOF(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class InputStringThenAnnotationContext extends ToplevelContext {
		public InputStringContext inputString() {
			return getRuleContext(InputStringContext.class,0);
		}
		public AnnotationContext annotation() {
			return getRuleContext(AnnotationContext.class,0);
		}
		public InputStringThenAnnotationContext(ToplevelContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AnnotationParserListener ) ((AnnotationParserListener)listener).enterInputStringThenAnnotation(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AnnotationParserListener ) ((AnnotationParserListener)listener).exitInputStringThenAnnotation(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AnnotationParserVisitor ) return ((AnnotationParserVisitor<? extends T>)visitor).visitInputStringThenAnnotation(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class AnnotationThenToplevelContext extends ToplevelContext {
		public AnnotationContext annotation() {
			return getRuleContext(AnnotationContext.class,0);
		}
		public ToplevelContext toplevel() {
			return getRuleContext(ToplevelContext.class,0);
		}
		public AnnotationThenToplevelContext(ToplevelContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AnnotationParserListener ) ((AnnotationParserListener)listener).enterAnnotationThenToplevel(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AnnotationParserListener ) ((AnnotationParserListener)listener).exitAnnotationThenToplevel(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AnnotationParserVisitor ) return ((AnnotationParserVisitor<? extends T>)visitor).visitAnnotationThenToplevel(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class AnnotationThenEOFContext extends ToplevelContext {
		public AnnotationContext annotation() {
			return getRuleContext(AnnotationContext.class,0);
		}
		public AnnotationThenEOFContext(ToplevelContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AnnotationParserListener ) ((AnnotationParserListener)listener).enterAnnotationThenEOF(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AnnotationParserListener ) ((AnnotationParserListener)listener).exitAnnotationThenEOF(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AnnotationParserVisitor ) return ((AnnotationParserVisitor<? extends T>)visitor).visitAnnotationThenEOF(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ToplevelContext toplevel() throws RecognitionException {
		ToplevelContext _localctx = new ToplevelContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_toplevel);
		try {
			setState(45);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
			case 1:
				_localctx = new InputStringThenEOFContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(33);
				inputString();
				}
				break;
			case 2:
				_localctx = new AnnotationThenEOFContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(34);
				annotation();
				}
				break;
			case 3:
				_localctx = new AnnotationThenToplevelContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(35);
				annotation();
				setState(36);
				toplevel();
				}
				break;
			case 4:
				_localctx = new InputStringThenAnnotationContext(_localctx);
				enterOuterAlt(_localctx, 4);
				{
				setState(38);
				inputString();
				setState(39);
				annotation();
				}
				break;
			case 5:
				_localctx = new InputStringThenAnnotationThenToplevelContext(_localctx);
				enterOuterAlt(_localctx, 5);
				{
				setState(41);
				inputString();
				setState(42);
				annotation();
				setState(43);
				toplevel();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class InputStringContext extends ParserRuleContext {
		public InputStringContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_inputString; }
	 
		public InputStringContext() { }
		public void copyFrom(InputStringContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class WordAnnotationThenEndContext extends InputStringContext {
		public WordAnnotationContext wordAnnotation() {
			return getRuleContext(WordAnnotationContext.class,0);
		}
		public WordAnnotationThenEndContext(InputStringContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AnnotationParserListener ) ((AnnotationParserListener)listener).enterWordAnnotationThenEnd(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AnnotationParserListener ) ((AnnotationParserListener)listener).exitWordAnnotationThenEnd(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AnnotationParserVisitor ) return ((AnnotationParserVisitor<? extends T>)visitor).visitWordAnnotationThenEnd(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class SimpleStringThenWordAnnotationContext extends InputStringContext {
		public SimpleStringContext simpleString() {
			return getRuleContext(SimpleStringContext.class,0);
		}
		public WordAnnotationContext wordAnnotation() {
			return getRuleContext(WordAnnotationContext.class,0);
		}
		public SimpleStringThenWordAnnotationContext(InputStringContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AnnotationParserListener ) ((AnnotationParserListener)listener).enterSimpleStringThenWordAnnotation(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AnnotationParserListener ) ((AnnotationParserListener)listener).exitSimpleStringThenWordAnnotation(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AnnotationParserVisitor ) return ((AnnotationParserVisitor<? extends T>)visitor).visitSimpleStringThenWordAnnotation(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class SimpleStringThenEndContext extends InputStringContext {
		public SimpleStringContext simpleString() {
			return getRuleContext(SimpleStringContext.class,0);
		}
		public SimpleStringThenEndContext(InputStringContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AnnotationParserListener ) ((AnnotationParserListener)listener).enterSimpleStringThenEnd(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AnnotationParserListener ) ((AnnotationParserListener)listener).exitSimpleStringThenEnd(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AnnotationParserVisitor ) return ((AnnotationParserVisitor<? extends T>)visitor).visitSimpleStringThenEnd(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class SimpleStringThenWordAnnotationThenInputStringContext extends InputStringContext {
		public SimpleStringContext simpleString() {
			return getRuleContext(SimpleStringContext.class,0);
		}
		public WordAnnotationContext wordAnnotation() {
			return getRuleContext(WordAnnotationContext.class,0);
		}
		public InputStringContext inputString() {
			return getRuleContext(InputStringContext.class,0);
		}
		public SimpleStringThenWordAnnotationThenInputStringContext(InputStringContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AnnotationParserListener ) ((AnnotationParserListener)listener).enterSimpleStringThenWordAnnotationThenInputString(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AnnotationParserListener ) ((AnnotationParserListener)listener).exitSimpleStringThenWordAnnotationThenInputString(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AnnotationParserVisitor ) return ((AnnotationParserVisitor<? extends T>)visitor).visitSimpleStringThenWordAnnotationThenInputString(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class WordAnnotationThenInputStringContext extends InputStringContext {
		public WordAnnotationContext wordAnnotation() {
			return getRuleContext(WordAnnotationContext.class,0);
		}
		public InputStringContext inputString() {
			return getRuleContext(InputStringContext.class,0);
		}
		public WordAnnotationThenInputStringContext(InputStringContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AnnotationParserListener ) ((AnnotationParserListener)listener).enterWordAnnotationThenInputString(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AnnotationParserListener ) ((AnnotationParserListener)listener).exitWordAnnotationThenInputString(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AnnotationParserVisitor ) return ((AnnotationParserVisitor<? extends T>)visitor).visitWordAnnotationThenInputString(this);
			else return visitor.visitChildren(this);
		}
	}

	public final InputStringContext inputString() throws RecognitionException {
		InputStringContext _localctx = new InputStringContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_inputString);
		try {
			setState(59);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				_localctx = new SimpleStringThenEndContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(47);
				simpleString();
				}
				break;
			case 2:
				_localctx = new WordAnnotationThenEndContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(48);
				wordAnnotation();
				}
				break;
			case 3:
				_localctx = new WordAnnotationThenInputStringContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(49);
				wordAnnotation();
				setState(50);
				inputString();
				}
				break;
			case 4:
				_localctx = new SimpleStringThenWordAnnotationContext(_localctx);
				enterOuterAlt(_localctx, 4);
				{
				setState(52);
				simpleString();
				setState(53);
				wordAnnotation();
				}
				break;
			case 5:
				_localctx = new SimpleStringThenWordAnnotationThenInputStringContext(_localctx);
				enterOuterAlt(_localctx, 5);
				{
				setState(55);
				simpleString();
				setState(56);
				wordAnnotation();
				setState(57);
				inputString();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AnnotationContext extends ParserRuleContext {
		public AnnotationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_annotation; }
	 
		public AnnotationContext() { }
		public void copyFrom(AnnotationContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class SyntacticAnnotationCaseContext extends AnnotationContext {
		public SyntacticAnnotationContext syntacticAnnotation() {
			return getRuleContext(SyntacticAnnotationContext.class,0);
		}
		public SyntacticAnnotationCaseContext(AnnotationContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AnnotationParserListener ) ((AnnotationParserListener)listener).enterSyntacticAnnotationCase(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AnnotationParserListener ) ((AnnotationParserListener)listener).exitSyntacticAnnotationCase(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AnnotationParserVisitor ) return ((AnnotationParserVisitor<? extends T>)visitor).visitSyntacticAnnotationCase(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class LexicalAnnotationCaseContext extends AnnotationContext {
		public LexicalAnnotationContext lexicalAnnotation() {
			return getRuleContext(LexicalAnnotationContext.class,0);
		}
		public LexicalAnnotationCaseContext(AnnotationContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AnnotationParserListener ) ((AnnotationParserListener)listener).enterLexicalAnnotationCase(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AnnotationParserListener ) ((AnnotationParserListener)listener).exitLexicalAnnotationCase(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AnnotationParserVisitor ) return ((AnnotationParserVisitor<? extends T>)visitor).visitLexicalAnnotationCase(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AnnotationContext annotation() throws RecognitionException {
		AnnotationContext _localctx = new AnnotationContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_annotation);
		try {
			setState(63);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				_localctx = new LexicalAnnotationCaseContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(61);
				lexicalAnnotation();
				}
				break;
			case 2:
				_localctx = new SyntacticAnnotationCaseContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(62);
				syntacticAnnotation();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LexicalAnnotationContext extends ParserRuleContext {
		public TerminalNode ANNOTATIONCHARACTER() { return getToken(AnnotationParserParser.ANNOTATIONCHARACTER, 0); }
		public TerminalNode ANNOTATIONOPEN() { return getToken(AnnotationParserParser.ANNOTATIONOPEN, 0); }
		public ChartContext chart() {
			return getRuleContext(ChartContext.class,0);
		}
		public TerminalNode ANNOTATIONCLOSE() { return getToken(AnnotationParserParser.ANNOTATIONCLOSE, 0); }
		public LexicalAnnotationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_lexicalAnnotation; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AnnotationParserListener ) ((AnnotationParserListener)listener).enterLexicalAnnotation(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AnnotationParserListener ) ((AnnotationParserListener)listener).exitLexicalAnnotation(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AnnotationParserVisitor ) return ((AnnotationParserVisitor<? extends T>)visitor).visitLexicalAnnotation(this);
			else return visitor.visitChildren(this);
		}
	}

	public final LexicalAnnotationContext lexicalAnnotation() throws RecognitionException {
		LexicalAnnotationContext _localctx = new LexicalAnnotationContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_lexicalAnnotation);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(65);
			match(ANNOTATIONCHARACTER);
			setState(66);
			match(ANNOTATIONOPEN);
			setState(67);
			match(T__0);
			setState(68);
			chart();
			setState(69);
			match(ANNOTATIONCLOSE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SyntacticAnnotationContext extends ParserRuleContext {
		public TerminalNode ANNOTATIONCHARACTER() { return getToken(AnnotationParserParser.ANNOTATIONCHARACTER, 0); }
		public TerminalNode ANNOTATIONOPEN() { return getToken(AnnotationParserParser.ANNOTATIONOPEN, 0); }
		public ChartContext chart() {
			return getRuleContext(ChartContext.class,0);
		}
		public TerminalNode ANNOTATIONCLOSE() { return getToken(AnnotationParserParser.ANNOTATIONCLOSE, 0); }
		public SyntacticAnnotationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_syntacticAnnotation; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AnnotationParserListener ) ((AnnotationParserListener)listener).enterSyntacticAnnotation(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AnnotationParserListener ) ((AnnotationParserListener)listener).exitSyntacticAnnotation(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AnnotationParserVisitor ) return ((AnnotationParserVisitor<? extends T>)visitor).visitSyntacticAnnotation(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SyntacticAnnotationContext syntacticAnnotation() throws RecognitionException {
		SyntacticAnnotationContext _localctx = new SyntacticAnnotationContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_syntacticAnnotation);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(71);
			match(ANNOTATIONCHARACTER);
			setState(72);
			match(ANNOTATIONOPEN);
			setState(73);
			match(T__1);
			setState(74);
			chart();
			setState(75);
			match(ANNOTATIONCLOSE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class WordAnnotationContext extends ParserRuleContext {
		public TerminalNode ANNOTATIONCHARACTER() { return getToken(AnnotationParserParser.ANNOTATIONCHARACTER, 0); }
		public TerminalNode ANNOTATIONOPEN() { return getToken(AnnotationParserParser.ANNOTATIONOPEN, 0); }
		public List<TerminalNode> TAGDELIMITER() { return getTokens(AnnotationParserParser.TAGDELIMITER); }
		public TerminalNode TAGDELIMITER(int i) {
			return getToken(AnnotationParserParser.TAGDELIMITER, i);
		}
		public WordContext word() {
			return getRuleContext(WordContext.class,0);
		}
		public TerminalNode COMMA() { return getToken(AnnotationParserParser.COMMA, 0); }
		public TagContext tag() {
			return getRuleContext(TagContext.class,0);
		}
		public TerminalNode ANNOTATIONCLOSE() { return getToken(AnnotationParserParser.ANNOTATIONCLOSE, 0); }
		public List<TerminalNode> SPACE() { return getTokens(AnnotationParserParser.SPACE); }
		public TerminalNode SPACE(int i) {
			return getToken(AnnotationParserParser.SPACE, i);
		}
		public WordAnnotationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_wordAnnotation; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AnnotationParserListener ) ((AnnotationParserListener)listener).enterWordAnnotation(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AnnotationParserListener ) ((AnnotationParserListener)listener).exitWordAnnotation(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AnnotationParserVisitor ) return ((AnnotationParserVisitor<? extends T>)visitor).visitWordAnnotation(this);
			else return visitor.visitChildren(this);
		}
	}
